# Spectral-Engine

./: .gitignore  CMakeLists.txt
Source/: CMakeLists.txt  CompileDefinitions.cmake  Main.cpp
Source/Core/: CMakeLists.txt  CMakeSources.cmake  FileReader.cpp  FileReader.h
Source/Core/Event/: EventBinding.cpp  EventBinding.h  EventContext.cpp  EventContext.h  EventSubscription.cpp  EventSubscription.h  IEventContext.h
Source/Core/Event/Message/: EventMessage.cpp  EventMessage.h  EventMessageType.h
Source/Core/Math/: Degree.cpp  Degree.h  Direction.h  LinearTransformations.cpp  LinearTransformations.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Radian.cpp  Radian.h  SpMath.cpp  SpMath.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Source/Core/Utility/: OptionalRef.h  ResourcesPathProvider.cpp
Source/Core/include/Core/: FileReader.h  FileReader.hpp
Source/Core/include/Core/Assert/: SpAssert.hpp
Source/Core/include/Core/Event/: EventBinding.h  EventBinding.hpp  EventContext.h  EventContext.hpp  EventSubscription.h  EventSubscription.hpp  IEventBinding.h  IEventBinding.hpp  IEventContext.h  IEventContext.hpp  IEventSubscription.h  IEventSubscription.hpp
Source/Core/include/Core/Math/: Degree.h  (+17 more)
Source/Core/src/: FileReader.cpp
Source/Core/src/Event/: EventBinding.cpp  EventContext.cpp  EventSubscription.cpp
Source/Core/src/Exception/: SpException.cpp
Source/Core/src/Math/: Degree.cpp  Direction.cpp  LinearTransformations.cpp  Matrix4x4.cpp  Quaternion.cpp  Radian.cpp  SpMath.cpp  SpMathUtils.cpp  Vector2.cpp  Vector3.cpp
Source/Core/src/Utility/: ResourcesPathProvider.cpp  WindowEventBinding.cpp
Source/Game/: CMakeLists.txt  CmakeSources.cmake  Initializers.h  Vertices.h
Source/Game/Components/: Camera.cpp  Camera.h  CameraInputHandler.cpp  CameraInputHandler.h  CameraTransform.cpp  CameraTransform.h  FPSCounter.cpp  FPSCounter.h  GameObjectComponent.cpp  GameObjectComponent.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  PositionOscilator.cpp  PositionOscilator.h  Renderer.cpp  Renderer.h  Rotator.cpp  Rotator.h  Transform.cpp  Transform.h
Source/Game/Components/UI/: TextRenderer.cpp  TextRenderer.h
Source/Game/GameObject/: GameObject.cpp  GameObject.h
Source/Game/Scene/: Scene.cpp  Scene.h
Source/PlatformIndependence/: CMakeLists.txt  CMakeSources.cmake  Environment.cpp  SpString.h  SpType.h  SpWindow.cpp  SpWindow.h
Source/PlatformIndependence/Input/: Input.cpp  Input.h  KeyCode.h  KeyInputManager.cpp  KeyInputManager.h  MouseInputManager.cpp  MouseInputManager.h
Source/PlatformIndependence/include/PlatformIndependence/: Environment.hpp  SpHash.hpp  SpString.hpp  SpType.hpp  SpWindow.h  SpWindow.hpp
Source/PlatformIndependence/src/: Environment.cpp  SpWindow.cpp
Source/PlatformIndependence/src/Input/: Input.cpp  KeyInputManager.cpp  MouseInputManager.cpp
Source/Render/: CMakeLists.txt  CMakeSources.cmake  CameraData.cpp  CameraData.h  CopyShaderFiles.cmake  LightData.cpp  LightData.h  LightDataContainer.cpp  LightDataContainer.h  Mesh.cpp  Mesh.h  MeshContainer.cpp  MeshContainer.h  Render.cpp  Render.h  RenderContext.cpp  RenderContext.h  RenderData.cpp  RenderData.h  RenderDataContainer.cpp  RenderDataContainer.h  RenderDataInitializer.cpp  RenderDataInitializer.h  RenderDataUpdate.cpp  RenderDataUpdate.h  RenderEngine.cpp  RenderEngine.h  RenderFunctions.h  Renderer.cpp  Renderer.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
Source/Render/Include/Render/: CameraData.h  LightData.h  LightDataContainer.h  Mesh.h  MeshContainer.h  RenderContext.h  RenderData.h  RenderDataContainer.h  RenderDataUpdate.h  RenderEngine.h  RenderFunctions.h  TextRenderer.h  Texture.h  TextureManager.h
Source/Render/Shader/: Shader.cpp  Shader.h  ShaderCompilationException.cpp  ShaderCompilationException.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramLinkingException.cpp  ShaderProgramLinkingException.h
Source/Render/ShaderFiles/: fragment_lighting_shader.glsl  fragment_text_shader.glsl  vertex_lighting_shader.glsl  vertex_shader.glsl
Source/Render/UI/Font/: Character.cpp  Character.h  Font.cpp  Font.h  FreeTypeHelper.cpp  FreeTypeHelper.h
Source/Render/include/Render/: CameraData.hpp  LightData.hpp  LightDataContainer.hpp  Mesh.hpp  MeshContainer.hpp  RenderContext.hpp  RenderData.hpp  RenderDataContainer.hpp  RenderEngine.hpp  RenderFunctions.hpp  TextRenderer.hpp  Texture.hpp  TextureManager.hpp
Source/Render/src/: CameraData.cpp  LightData.cpp  LightDataContainer.cpp  Mesh.cpp  MeshContainer.cpp  RenderContext.cpp  RenderData.cpp  RenderDataContainer.cpp  RenderEngine.cpp  TextRenderer.cpp  Texture.cpp  TextureManager.cpp
Source/Render/src/GUI/: GUIDrawCallDataContainer.cpp  ImGUIId.cpp  TextRenderer.cpp  TextureRenderer.cpp
Source/Render/src/Shader/: Shader.cpp  ShaderCompilationException.cpp  ShaderProgram.cpp  ShaderProgramLinkingException.cpp
Source/Render/src/UI/: TextRenderer.cpp
Source/Scene/: CMakeLists.txt  CmakeSources.cmake  Initializers.h  Vertices.h
Source/Scene/Components/: Camera.cpp  CameraInputHandler.h  FPSCounter.cpp  FPSCounter.h  GameObjectComponent.cpp  LightSource.cpp  LightSource.h  Renderer.h  Rotator.h
Source/Scene/Components/Interface/: IRenderer.h
Source/Scene/GameObject/: GameObject.h
Source/Scene/Scene/: Scene.cpp  Scene.h
Source/Scene/include/Scene/: Initializers.h  Initializers.hpp  Vertices.h  Vertices.hpp
Source/Scene/src/Components/: Camera.cpp  CameraInputHandler.cpp  CameraTransform.cpp  FPSCounter.cpp  GameObjectComponent.cpp  LightSource.cpp  Material.cpp  PositionOscilator.cpp  Renderer.cpp  Rotator.cpp  Transform.cpp
Source/Scene/src/GameObject/: GameObject.cpp
Source/Scene/src/Scene/: Scene.cpp
Source/SpectralEditor/: CMakeLists.txt
Source/SpectralEditor/src/: Main.cpp
Source/Test/: CMakeLists.txt  CMakeSources.cmake  main.cpp
Source/Test/Core/Math/: DegreeTest.cpp  LinearTransformationsTest.cpp  Matrix4x4Test.cpp  QuaternionTest.cpp  RadianTest.cpp  Vector2Test.cpp  Vector3Test.cpp
(+116 files in other folders)
